# dongnae

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE.txt  README.md  test_dongnae.ipynb
.github/workflows/: ci.yml  release.yml
benchmark/: benchmark.md  benchmark.py  requirements.txt
benchmark/result/: benchmark_strict_251203_0027.csv  benchmark_strict_251203_0027.txt
data/: CSVtoJSON.py  covert_json_to_js_module.py  dongnaeKR_251117.csv  dongnaeKR_251130.csv  dongnae_cols.json
docs/: index.html  main.js  start_demo.py
docs/src/: engine.js  index.d.ts
js-data-kr/: .npmignore  README.md  index.d.ts  package.json  start_demo.py
js-data-kr/examples/web-demo/: index.html  main.js
js-data-kr/src/: dongnae_data.js  dongnae_data.json  engine.js
js-data-kr/test/: engine.test.mjs
py-core/: README.md  pyproject.toml
py-core/dongnae/: __init__.py  engine.py
py-data-kr/: MANIFEST.in  README.md  pyproject.toml
py-data-kr/dongnae_kr/: __init__.py
tests/: conftest.py  test_geocoding.py  test_large_radius.py  test_loading.py  test_lookup.py  test_resolve.py  test_search.py
