[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dongnae"
version = "0.2.0"
description = "Lightest Possible Spatial Engine"
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE.txt"}
authors = [
  {name = "nash-dir"}
]
keywords = ["korea", "dongnae", "geocoding", "search", "spatial"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [] 

[project.urls]
"Homepage" = "https://github.com/nash-dir/dongnae"
"Bug Tracker" = "https://github.com/nash-dir/dongnae/issues"