[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dongnae"
version = "0.3.0"
description = "Ultra lightweight, self contained, Quasi-Geocoding Engine"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE.txt"}
authors = [
  {name = "nash-dir"}
]
keywords = ["korea", "dongnae", "geocoding", "search", "spatial"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: GIS",
]
dependencies = []

# Runtime stays dependency-free. Test-only tooling lives in this extra so it is
# never pulled in by `pip install dongnae`; CI installs it with `.[test]`.
[project.optional-dependencies]
test = ["pytest>=7.0"]

[project.urls]
"Homepage" = "https://github.com/nash-dir/dongnae"
"Bug Tracker" = "https://github.com/nash-dir/dongnae/issues"