[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dongnae-kr"
# CalVer (YYYY.MM.DD) is intentional: this is a data package whose version
# tracks the bundled dataset's vintage, not an API. The engine uses SemVer.
version = "2025.11.30"
description = "Korean dataset plugin for dongnae engine"
readme = "README.md"
# Matches the engine: dongnae relies on typing.TypedDict (3.8+).
requires-python = ">=3.8"
license = {file = "LICENSE.txt"}
authors = [{name = "nash-dir"}]
dependencies = [
    "dongnae>=0.1.0"  # 코어 패키지 의존성 명시
]

[tool.setuptools.packages.find]
include = ["dongnae_kr*"]

[tool.setuptools.package-data]
"dongnae_kr" = ["data/*.csv"]
